--- a/Lecture_4_2016.ipynb
+++ b/Lecture_4_2016.ipynb
@@ -2,9 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lecture 10 -- Functional Programming in Python.ipynb\r\n",
+      "Lecture 10 -- Functional Programming in Python.v3.ipynb\r\n",
+      "Lecture 12 -- Regular Expressions.ipynb\r\n",
+      "Lecture 12 -- Regular Expressions.v3.ipynb\r\n",
+      "Lecture 3 .ipynb\r\n",
+      "Lecture 3 Unix Command.pdf\r\n",
+      "Lecture 4 -- Advanced Unix, Git, and Vim.ipynb\r\n",
+      "Lecture 4 -- Advanced Unix, Git, and Vim.v3.ipynb\r\n",
+      "Lecture 4 -- Errors in Python.ipynb\r\n",
+      "Lecture 4 -- Errors in Python.v3.ipynb\r\n",
+      "Lecture 5 NumPy & Plotting.pdf\r\n",
+      "Lecture 6--Advanced Numpy, Documentation, and Workflow.ipynb\r\n",
+      "Lecture 8--Exceptions, Debugging, and Designing in the Modern World.ipynb\r\n",
+      "Lecture 8--Exceptions, Debugging, and Designing in the Modern World.v3.ipynb\r\n",
+      "\u001b[34mLecture 9--Advanced OOP\u001b[m\u001b[m\r\n",
+      "Lecture1.pptx\r\n",
+      "Lecture2.ipynb\r\n",
+      "Lecture2.v3.ipynb\r\n",
+      "Lecture_4_2016.ipynb\r\n",
+      "\u001b[31mOOP.pdf\u001b[m\u001b[m\r\n",
+      "README.md\r\n",
+      "\u001b[34mlecture15_optimization\u001b[m\u001b[m\r\n",
+      "\u001b[34mlecture16_numerical_methods\u001b[m\u001b[m\r\n",
+      "octocat.png\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -14,10 +57,10 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {
       "image/png": {
-       "width": 500
+       "width": 300
       }
      },
      "output_type": "execute_result"
@@ -26,12 +69,12 @@
    "source": [
     "# Github mascot!\n",
     "from IPython.display import Image\n",
-    "Image(filename = 'octocat.png',width=500)"
+    "Image(filename = 'octocat.png',width=300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -40,22 +83,191 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 84ce203] octocat!\r\n",
+      "On branch master\r\n",
+      "Your branch is up-to-date with 'origin/master'.\r\n",
+      "Changes to be committed:\r\n",
+      "  (use \"git reset HEAD <file>...\" to unstage)\r\n",
+      "\r\n",
+      "\t\u001b[32mnew file:   octocat.png\u001b[m\r\n",
+      "\r\n",
+      "Changes not staged for commit:\r\n",
+      "  (use \"git add/rm <file>...\" to update what will be committed)\r\n",
+      "  (use \"git checkout -- <file>...\" to discard changes in working directory)\r\n",
+      "\r\n",
+      "\t\u001b[31mdeleted:    .ipynb_checkpoints/Untitled-checkpoint.ipynb\u001b[m\r\n",
+      "\t\u001b[31mdeleted:    Untitled.ipynb\u001b[m\r\n",
+      "\r\n",
+      "Untracked files:\r\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\r\n",
+      "\r\n",
+      "\t\u001b[31m.ipynb_checkpoints/Lecture_4_2016-checkpoint.ipynb\u001b[m\r\n",
+      "\t\u001b[31mLecture_4_2016.ipynb\u001b[m\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check up on the files that need to be added \n",
+    "!git status \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# stage your changes, must do for every file\n",
+    "!git add octocat.png\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 91a5539] added octocat image\r\n",
       " 1 file changed, 0 insertions(+), 0 deletions(-)\r\n",
       " create mode 100644 octocat.png\r\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# summarize the changes you made, like you would in a docstring.\n",
+    "# !git commit\n",
+    "# !git commit -m 'message'\n",
+    "!git commit -m 'added octocat image'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mcommit 91a553953d7cbe9070cc49b75d12af23f1bc8234\u001b[m\r\n",
+      "Author: Andrew Guo <andrewguo07@gmail.com>\r\n",
+      "Date:   Thu Apr 7 17:36:50 2016 -0700\r\n",
+      "\r\n",
+      "    added octocat image\r\n",
+      "\r\n",
+      "\u001b[1mdiff --git a/octocat.png b/octocat.png\u001b[m\r\n",
+      "\u001b[1mnew file mode 100644\u001b[m\r\n",
+      "\u001b[1mindex 0000000..8dbe1be\u001b[m\r\n",
+      "Binary files /dev/null and b/octocat.png differ\r\n",
+      "\r\n",
+      "\u001b[33mcommit 01a4422843d639524290f2ca4d11932cef9d1dcc\u001b[m\r\n",
+      "Author: Andrew Guo <andrewguo07@gmail.com>\r\n",
+      "Date:   Wed Apr 6 23:08:17 2016 -0700\r\n",
+      "\r\n",
+      "    grr\r\n",
+      "\r\n",
+      "\u001b[1mdiff --git a/octocat.png b/octocat.png\u001b[m\r\n",
+      "\u001b[1mdeleted file mode 100644\u001b[m\r\n",
+      "\u001b[1mindex 8dbe1be..0000000\u001b[m\r\n",
+      "Binary files a/octocat.png and /dev/null differ\r\n",
+      "\r\n",
+      "\u001b[33mcommit c17c8d73046a55d02c34e3648f884da4ef732f7a\u001b[m\r\n",
+      "Author: Andrew Guo <andrewguo07@gmail.com>\r\n",
+      "Date:   Wed Apr 6 23:06:25 2016 -0700\r\n",
+      "\r\n",
+      "    updates\r\n",
+      "\r\n",
+      "\u001b[1mdiff --git a/octocat.png b/octocat.png\u001b[m\r\n",
+      "\u001b[1mnew file mode 100644\u001b[m\r\n",
+      "\u001b[1mindex 0000000..8dbe1be\u001b[m\r\n",
+      "Binary files /dev/null and b/octocat.png differ\r\n",
+      "\r\n",
+      "\u001b[33mcommit aeafec9b557fdd1c88172f18e0127fc8126527af\u001b[m\r\n",
+      "Author: Andrew Guo <andrewguo07@gmail.com>\r\n",
+      "Date:   Wed Apr 6 23:04:36 2016 -0700\r\n",
+      "\r\n",
+      "    deleted octocat\r\n",
+      "\r\n",
+      "\u001b[1mdiff --git a/octocat.png b/octocat.png\u001b[m\r\n",
+      "\u001b[1mdeleted file mode 100644\u001b[m\r\n",
+      "\u001b[1mindex 8dbe1be..0000000\u001b[m\r\n",
+      "Binary files a/octocat.png and /dev/null differ\r\n",
+      "\r\n",
+      "\u001b[33mcommit 84ce203a6c6563d490b99c78d266fb397f25698f\u001b[m\r\n",
+      "Author: Andrew Guo <andrewguo07@gmail.com>\r\n",
+      "Date:   Wed Apr 6 23:01:48 2016 -0700\r\n",
+      "\r\n",
+      "    octocat!\r\n",
+      "\r\n",
+      "\u001b[1mdiff --git a/octocat.png b/octocat.png\u001b[m\r\n",
+      "\u001b[1mnew file mode 100644\u001b[m\r\n",
+      "\u001b[1mindex 0000000..8dbe1be\u001b[m\r\n",
+      "Binary files /dev/null and b/octocat.png differ\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# shows all the commit messages you've made\n",
+    "# !git log            => for entire directory\n",
+    "# !git log -p <path>  => for specified path\n",
+    "!git log -p octocat.png"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "warning: push.default is unset; its implicit value has changed in\n",
+      "Git 2.0 from 'matching' to 'simple'. To squelch this message\n",
+      "and maintain the traditional behavior, use:\n",
+      "\n",
+      "  git config --global push.default matching\n",
+      "\n",
+      "To squelch this message and adopt the new behavior now, use:\n",
+      "\n",
+      "  git config --global push.default simple\n",
+      "\n",
+      "When push.default is set to 'matching', git will push local branches\n",
+      "to the remote branches that already exist with the same name.\n",
+      "\n",
+      "Since Git 2.0, Git defaults to the more conservative 'simple'\n",
+      "behavior, which only pushes the current branch to the corresponding\n",
+      "remote branch that 'git pull' uses to update the current branch.\n",
+      "\n",
+      "See 'git help config' and search for 'push.default' for further information.\n",
+      "(the 'simple' mode was introduced in Git 1.7.11. Use the similar mode\n",
+      "'current' instead of 'simple' if you sometimes use older versions of Git)\n",
+      "\n",
+      "Counting objects: 3, done.\n",
+      "Delta compression using up to 4 threads.\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 101.40 KiB | 0 bytes/s, done.\n",
+      "Total 3 (delta 1), reused 0 (delta 0)\n",
+      "To https://github.com/physics91si/lectures\n",
+      "   01a4422..91a5539  master -> master\n"
+     ]
+    }
+   ],
+   "source": [
+    "# send your messages to the main repository\n",
+    "!git push"
+   ]
   }
  ],
  "metadata": {
