Added lectures 4 and 6

--- a/old_lectures/Lecture 8 -- Functional Programming in Python.ipynb
+++ b/old_lectures/Lecture 8 -- Functional Programming in Python.ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "#### Lecture 10: Functional Programming in Python"
+    "#### Lecture 8: Functional Programming in Python"
    ]
   },
   {
@@ -63,60 +63,6 @@
    },
    "source": [
     "#### Review from last time"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "We saw more about how you can use IPython to explore object internals\n",
-    "\n",
-    "Wrote special functions, learned about inheritance, saw how Python uses special functions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1.00 + 2.00i + 1.00j + 6.14k\n"
-     ]
-    }
-   ],
-   "source": [
-    "class Quaternion:\n",
-    "    def __init__(self, cx, ci, cj, ck):\n",
-    "        self._cx = cx\n",
-    "        self._ci = ci\n",
-    "        self._cj = cj\n",
-    "        self._ck = ck\n",
-    "        \n",
-    "    def __repr__(self):\n",
-    "        return '%.2f + %.2fi + %.2fj + %.2fk' % \\\n",
-    "            (self._cx, self._ci, self._cj, self._ck)\n",
-    "        \n",
-    "    def __add__(self, o):\n",
-    "        return Quaternion(self._cx + o._cx, self._ci + o._ci, self._cj + o._cj, self._ck + o._ck)\n",
-    "    \n",
-    "    # how do we support +, -?\n",
-    "    \n",
-    "p = Quaternion(0, 1, 2, 3)\n",
-    "q = Quaternion(-1, 1, -1, 3.14159)\n",
-    "print(p+q)"
    ]
   },
   {
@@ -524,7 +470,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 'mineminemine', 15.0, (1, 2, 3, 1, 2, 3, 1, 2, 3)]\n",
+      "[3, 'mineminemine', 15.0, (1, 2, 3, 1, 2, 3, 1, 2, 3)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<map at 0x1057ef4e0>"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remake a line like this as a list comprehension? As a map?\n",
+    "old = [1,'mine',5.0,(1,2,3)] \n",
+    "new = [ ]\n",
+    "for x in old:\n",
+    "    new.append(x*3)\n",
+    "print(new)\n",
+    "\n",
+    "print([x*3 for x in old])\n",
+    "\n",
+    "map((lambda x: x*3),[1,2,3])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "slideshow": {
