Added lecture 9 materials

--- a/Lecture 9 - Exceptions and Debugging.ipynb
+++ b/Lecture 9 - Exceptions and Debugging.ipynb
@@ -2,9 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "skip"
     }
@@ -19,7 +19,7 @@
     "import matplotlib.pyplot as plt\n",
     "from copy import deepcopy\n",
     "\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n"
    ]
   },
   {
@@ -30,7 +30,7 @@
     }
    },
    "source": [
-    "####Lecture 8: Exceptions, Debugging, and Modular Design"
+    "## Lecture 9: Exceptions and Debugging"
    ]
   },
   {
@@ -93,64 +93,13 @@
     }
    },
    "source": [
-    "##### On Tuesday We Discussed OOP, Classes\n",
+    "##### On Thursday, We Discussed OOP, Classes\n",
     "\n",
     "OOP allows us to organize our code by thinking about data in terms of actors and actions\n",
     "\n",
     "Classes *declare kinds* of data, and instances are particular representations of that data:\n",
     "\n",
     "This is the difference between the class 'Float' and the number 3.14159"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# An example application: trigger modeling at the ATLAS detector\n",
-    "\n",
-    "# Basic idea, too much data!\n",
-    "# Reason to use OOP: Trigger 'thinks' about what to reject, \n",
-    "# keeps statistics on what fraction of events it accepts\n",
-    "\n",
-    "# particle format\n",
-    "test_particles = [(5.0, 0.0),    # photon?\n",
-    "                  (174.2, 80.8), # w boson?\n",
-    "                  (220.4, 81.8)] # w boson?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class MassTrigger:\n",
-    "    def __init__(self, cut):\n",
-    "        self._cut = cut\n",
-    "    \n",
-    "    def accepts(self, event):\n",
-    "        masses = np.array(event)[:,-1]\n",
-    "        \n",
-    "        if masses[masses > self._cut].shape()[0] >= 2:\n",
-    "            return True\n",
-    "        return False\n",
-    "\n",
-    "# W boson has a mass of 80.4 GeV\n",
-    "two_ws_trigger = MassTrigger(80.4)\n",
-    "print(two_ws_trigger.accepts(test_particles))\n",
-    "print(two_ws_trigger.acceptance_rate())"
    ]
   },
   {
@@ -162,49 +111,12 @@
    },
    "source": [
     "#### A potential point of potential confusion: Class variables and instance variables\n",
-    "\n",
-    "If I changed the total and accepted events... and recorded their ID"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true,
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "class BadMassTrigger:\n",
-    "    \"\"\"\n",
-    "    A simple trigger that accepts \n",
-    "    an event if it contains two particles passing a mass cut\"\"\"\n",
-    "\n",
-    "    accepted_event_numbers = []\n",
-    "    \n",
-    "    def __init__(self, cut):\n",
-    "        self.accepted_evts = 0\n",
-    "        self.total_evts = 0\n",
-    "        self.cut = cut\n",
-    "    \n",
-    "    def accepts(self, event, event_number):\n",
-    "        self.total_evts += 1\n",
-    "        np_event = np.array(event)\n",
-    "        if np_event[:,-1][np_event[:,-1] > self.cut].shape[0] >= 2:\n",
-    "            self.accepted_evts += 1\n",
-    "            self.accepted_event_numbers.append(event_number)\n",
-    "            return True\n",
-    "        return False\n",
-    "    \n",
-    "    def acceptance_rate(self):\n",
-    "        return float(self.accepted_evts) / self.total_evts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -216,20 +128,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "True\n",
-      "[0, 0]\n"
+      "['bone', 'frisbee']\n",
+      "['bone', 'frisbee']\n"
      ]
     }
    ],
    "source": [
-    "trig_w = BadMassTrigger(80.4)\n",
-    "trig_lowmass = BadMassTrigger(10.0)\n",
+    "class Dog:\n",
+    "    toys = []\n",
+    "    \n",
+    "    def __init__(self,startAge,breed):\n",
+    "        self.age = startAge\n",
+    "        self.breed = breed\n",
+    "    \n",
+    "    def add_toy(self,toy):\n",
+    "        self.toys.append(toy)\n",
+    "        \n",
+    "Sirius = Dog(5,'Pomeranian')\n",
+    "Sirius.add_toy('bone')\n",
+    "Cerberus = Dog(10,'Retriever')\n",
+    "Cerberus.add_toy('frisbee')\n",
     "\n",
-    "print(trig_w.accepts(test_particles, 0))\n",
-    "print(trig_lowmass.accepts(test_particles, 0))\n",
-    "\n",
-    "print(trig_w.accepted_event_numbers)"
+    "print(Sirius.toys)\n",
+    "print(Cerberus.toys)\n",
+    "    "
    ]
   },
   {
@@ -250,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -265,7 +187,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-cb627eb697ee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Okay... new material\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Who remembers seeing exceptions?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;36m1\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-48-cb627eb697ee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Okay... new material\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Who remembers seeing exceptions?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;36m1\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
      ]
     }
@@ -293,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -308,15 +230,23 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-6bd7a1fe1239>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-62-9cc5a54d0bb9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: p() takes 0 positional arguments but 1 was given"
      ]
     }
    ],
    "source": [
+    "# What kind of Exception is raised here?\n",
     "def p():\n",
     "    pass\n",
     "p(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In addition to reading exceptions, we can raise them ourselves!"
    ]
   },
   {
@@ -386,17 +316,6 @@
     "Our \"I can't even.\" ValueError occurred because our function hated even numbers, but ValueErrors occur whenever a piece of code encounters an unexpected value.\n",
     "\n",
     "This is the difference between a class (TypeError) and an instance of that class (TypeError(\"Some complaint\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Let's Tear an Exception Apart in IPython"
    ]
   },
   {
@@ -545,7 +464,7 @@
     }
    },
    "source": [
-    "Here are some reasonble uses of things to be checked with assertions:\n",
+    "Here are some reasonable uses of things to be checked with assertions:\n",
     "\n",
     "1. Parameter types, classes, or values\n",
     "2. Data structure invariants\n",
@@ -577,6 +496,7 @@
     "We don't have to deal with exceptions as much if we prevent errors from occurring in the first place!\n",
     "\n",
     "Python makes this easier than most languages, because it has a REPL:\n",
+    "(read-eval-print loop)\n",
     "\n",
     "Encourages the following workflow:\n",
     "\n",
@@ -598,7 +518,14 @@
    "source": [
     "Given how easy it is to test code by hand in Python, there's really no excuse to write a lot of code and cross your fingers that it works\n",
     "\n",
-    "If you find that you can't get to a problem quickly by playing with it in a REPL, there are lots of tools available to you find and fix issues. One beautiful one is pdb."
+    "If you find that you can't get to a problem quickly by playing with it in a REPL, there are lots of tools available to you find and fix issues. One beautiful one is pdb.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Testing out pdb"
    ]
   },
   {
@@ -657,12 +584,9 @@
     "    \"\"\"\n",
     "    pass\n",
     "\n",
-    "# IPython\n",
-    "# Tab completion! Question mark! Exclamation point!\n",
-    "\n",
     "# OPTIONAL\n",
     "# pdb\n",
-    "# s, c, p, bt, %debug (IPython magic), pdb.set_trace()\n"
+    "# s, c, p, w, %debug (IPython magic), pdb.set_trace()\n"
    ]
   },
   {
