--- a/Lecture08.ipynb
+++ b/Lecture08.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -194,16 +194,26 @@
     "        return Complex(self.real,-self.imag)\n",
     "    def __abs__(self):\n",
     "        return math.sqrt(self.real ** 2 + self.imag **2)\n",
-    "       \n",
-    "    def __str__(self):\n",
+    "     \n",
+    "# Method written up in class\n",
+    "#\n",
+    "#    def __str__(self):\n",
     "#        return \"{self.real} + {self.imag}i\".format(self=self)\n",
-    "        return str(self.real) + '+'+ str(self.imag) + 'i'\n",
+    "#        return str(self.real) + '+'+ str(self.imag) + 'i'\n",
+    "\n",
+    "\n",
+    "# Official method\n",
+    "    def __repr__(self):\n",
+    "        return '{self.real} + {self.imag}i'.format(self=self)\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return \"{self.real}+{self.imag}i\".format(self=self)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -213,18 +223,9 @@
      "output_type": "stream",
      "text": [
       "20\n",
-      "3\n"
+      "3\n",
+      "20+3i\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'20+3i'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -232,7 +233,7 @@
     "z2 = z + 15\n",
     "print(z2.real)\n",
     "print(z2.imag)\n",
-    "str(z2)"
+    "print(z2)"
    ]
   },
   {
