--- a/Lecture 9 - Exceptions and Debugging.ipynb
+++ b/Lecture 9 - Exceptions and Debugging.ipynb
@@ -44,13 +44,10 @@
     "Here's what's planned for today:\n",
     "\n",
     "Addressing problems before they happen:\n",
-    "1. Asserts!\n",
-    "2. Exceptions! An object we've been running into a lot! \n",
-    "3. Raising an exception (complaining about a problem)\n",
-    "4. Catching an exception (dealing with a problem)\n",
-    "\n",
-    "Dealing with unexpected problems:\n",
-    "1. Finding unexpected problems\n",
+    "1. Exceptions! An object we've been running into a lot! \n",
+    "    - Raising an exception (complaining about a problem)\n",
+    "    - Catching an exception (dealing with a problem)\n",
+    "2. Assertions! New material! \n",
     "\n",
     "Preventing problems:\n",
     "1. Documentation\n",
@@ -95,11 +92,11 @@
    "source": [
     "##### On Thursday, We Discussed OOP, Classes\n",
     "\n",
-    "OOP allows us to organize our code by thinking about data in terms of actors and actions\n",
+    "OOP allows us to organize our code by thinking about data in terms of objects and methods that perform actions on objects or return output. \n",
     "\n",
     "Classes *declare kinds* of data, and instances are particular representations of that data:\n",
     "\n",
-    "This is the difference between the class 'Float' and the number 3.14159"
+    "E.g. the difference between the class 'Float' and the number 3.14159"
    ]
   },
   {
@@ -135,6 +132,8 @@
    ],
    "source": [
     "class Dog:\n",
+    "    \n",
+    "    #Defining a list of toys\n",
     "    toys = []\n",
     "    \n",
     "    def __init__(self,startAge,breed):\n",
@@ -162,9 +161,11 @@
     }
    },
    "source": [
-    "##### Classes are very useful!\n",
+    "### Classes are very useful!\n",
     "\n",
-    "OOP is a fairly natural way of organizing how you think about your code, but don't go overboard. Sometimes achieving the kind of data/method locality required by OOP forces you to program unnaturally.\n",
+    "OOP is a fairly natural way of organizing how you think about your code, but don't go overboard. \n",
+    "\n",
+    "Sometimes achieving the kind of data/method locality required by OOP forces you to program unnaturally.\n",
     "\n",
     "It is better to do something *simply* and *naturally* than to try to shove it into a particular paradigm.\n",
     "\n"
@@ -210,12 +211,12 @@
     "\n",
     "Type errors, index errors, bad file read... plenty of others!\n",
     "\n",
-    "How do you think they are organized?"
+    "How do you handle Exceptions when they occur?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -230,7 +231,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-62-9cc5a54d0bb9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-5-4f979697ae7b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# How do I handle the exception?\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: p() takes 0 positional arguments but 1 was given"
      ]
     }
@@ -239,14 +240,16 @@
     "# What kind of Exception is raised here?\n",
     "def p():\n",
     "    pass\n",
-    "p(5)"
+    "p(5)\n",
+    "\n",
+    "# How do I handle the exception?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In addition to reading exceptions, we can raise them ourselves!"
+    "In addition to handling exceptions, we can raise them ourselves!"
    ]
   },
   {
@@ -313,9 +316,9 @@
    "source": [
     "Because different *kinds* of bad things can happen, there are different classes of exceptions.\n",
     "\n",
-    "Our \"I can't even.\" ValueError occurred because our function hated even numbers, but ValueErrors occur whenever a piece of code encounters an unexpected value.\n",
+    "Our \"I can't even.\" TypeError occurred because our function hated even numbers, but TypeErrors occur whenever a piece of code encounters an unexpected value.\n",
     "\n",
-    "This is the difference between a class (TypeError) and an instance of that class (TypeError(\"Some complaint\")"
+    "This is the difference between a class (TypeError) and an instance of that class (TypeError(\"Some complaint\"))"
    ]
   },
   {
@@ -345,12 +348,12 @@
    "source": [
     "#### What you should do...\n",
     "\n",
-    "Use assertions!"
+    "Use assertions! They raise errors for you! "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -365,26 +368,27 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-04bf3e5c57c9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mmake_sure_its_zero\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-17-04bf3e5c57c9>\u001b[0m in \u001b[0;36mmake_sure_its_zero\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \"\"\"Ensures it's argument is zero using the \n\u001b[1;32m      3\u001b[0m     Python language feature, 'assert' \"\"\"\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0malternate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-ac3b354d77f3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0;32mraise\u001b[0m \u001b[0mAssertionError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0mmake_sure_its_zero\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;31m#alternate_msiz(1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-4-ac3b354d77f3>\u001b[0m in \u001b[0;36mmake_sure_its_zero\u001b[0;34m(a)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \"\"\"Ensures its argument is zero using the \n\u001b[1;32m      3\u001b[0m     Python language feature, 'assert' \"\"\"\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
    ],
    "source": [
     "def make_sure_its_zero(a):\n",
-    "    \"\"\"Ensures it's argument is zero using the \n",
+    "    \"\"\"Ensures its argument is zero using the \n",
     "    Python language feature, 'assert' \"\"\"\n",
     "    assert a == 0\n",
     "    \n",
     "\n",
-    "def alternate(a):\n",
-    "    \"\"\"Makes sure it's argument is zero \n",
+    "def alternate_msiz(a):\n",
+    "    \"\"\"Makes sure its argument is zero \n",
     "    by directly raising an AssertionError\"\"\"\n",
     "    if a != 0:\n",
     "        raise AssertionError()\n",
     "\n",
-    "make_sure_its_zero(1)"
+    "make_sure_its_zero(1)\n",
+    "#alternate_msiz(1)"
    ]
   },
   {
@@ -451,9 +455,9 @@
    },
    "source": [
     "##### 'Asserting' Hierarchies\n",
-    "Type systems, as in Java and other statically typed languages, are one way of declaring these invariants.\n",
+    "**Type systems**, as in Java and other statically typed languages, are one way of declaring these invariants.\n",
     "\n",
-    "Asserts are also a very common way of doing this."
+    "In Python, **asserts** are a common way of doing this."
    ]
   },
   {
@@ -525,7 +529,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Testing out pdb"
+    "## Testing out the Python debugger: pdb"
    ]
   },
   {
@@ -536,7 +540,7 @@
     }
    },
    "source": [
-    "#### Review:\n",
+    "#### Summary:\n",
     "\n",
     "Keep in mind that classes, modules (which are just Python files), and functions allow you to structure the code that you write.\n",
     "\n",
@@ -587,6 +591,62 @@
     "# OPTIONAL\n",
     "# pdb\n",
     "# s, c, p, w, %debug (IPython magic), pdb.set_trace()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-02cffef19412>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"aaa\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m \u001b[0;31m#pdb.set_trace()\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#import pdb\n",
+    "\n",
+    "def combine(s1,s2):      # define subroutine combine, which...\n",
+    "    s3 = s1 + s2 + s1    # sandwiches s2 between copies of s1, ...\n",
+    "    s3 = '\"' + s3 +'\"'   # encloses it in double quotes,...\n",
+    "    return s3            # and returns it.\n",
+    "\n",
+    "a = \"aaa\"\n",
+    "raise TypeError\n",
+    "#pdb.set_trace()\n",
+    "\n",
+    "b = \"bbb\"\n",
+    "final = combine(a,b)\n",
+    "print(final)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR: No traceback has been produced, nothing to debug.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%debug"
    ]
   },
   {
