--- a/Lecture 13 -- Regular Expressions (2016).ipynb
+++ b/Lecture 13 -- Regular Expressions (2016).ipynb
@@ -8,7 +8,7 @@
     }
    },
    "source": [
-    "#### Lecture 12: Regular Expressions in Python"
+    "## Lecture 13: Regular Expressions in Python"
    ]
   },
   {
@@ -119,7 +119,7 @@
     "# Let's imagine Google buys Stanford and it becomes a commercial institution...\n",
     "# We need to change everyone's .edu address to a .com!\n",
     "\n",
-    "my_email = 'chstan@stanford.edu'\n",
+    "my_email = 'aguoman@stanford.edu'\n",
     "#my_new_email = ??\n",
     "\n",
     "#print(my_new_email)\n",
@@ -150,7 +150,7 @@
     "# Some valid options\n",
     "\n",
     "# mostly works... replace\n",
-    "my_email = \"chstan.educator@stanford.edu\"\n",
+    "my_email = \"aguoman.educator@stanford.edu\"\n",
     "my_new_email = my_email.replace(\".edu\", \".com\")\n",
     "print(my_new_email)\n",
     "\n",
@@ -529,22 +529,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<_sre.SRE_Match object; span=(0, 19), match='chstan@stanford.edu'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "# CHEATSHEET at regexr website (much better than what I have here)\n",
