--- a/old_lectures/Lecture 13 -- Regular Expressions (2016).ipynb
+++ b/old_lectures/Lecture 13 -- Regular Expressions (2016).ipynb
@@ -36,25 +36,12 @@
     }
    },
    "source": [
-    "# Questions?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "#### Alright... Regular Expressions\n",
-    "\n",
-    "Let's start with a motivating example"
+    "Let's start with a motivating example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 121,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -75,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -87,9 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "chstan.comcator@stanford.com\n",
-      "chstan.educator@stanford.com\n",
-      "chstan.educator@stanford.com\n"
+      "aguoman.comcator@stanford.com\n"
      ]
     }
    ],
@@ -99,17 +84,75 @@
     "# mostly works... replace\n",
     "my_email = \"aguoman.educator@stanford.edu\"\n",
     "my_new_email = my_email.replace(\".edu\", \".com\")\n",
-    "print(my_new_email)\n",
-    "\n",
+    "print(my_new_email)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aguoman.educator@stanford.com\n"
+     ]
+    }
+   ],
+   "source": [
     "# this is actually good, but not very nice looking... slicing\n",
     "my_new_email = my_email[:-4] + \".com\"\n",
-    "print(my_new_email)\n",
-    "\n",
+    "print(my_new_email)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['aguoman', 'educator@stanford', 'edu']\n",
+      "aguoman.educator@stanford.com\n"
+     ]
+    }
+   ],
+   "source": [
     "# don't do this... but this works... split/join\n",
     "#...\n",
+    "# first get a list\n",
+    "my_new_email = my_email.split('.')\n",
     "print(my_new_email)\n",
     "\n",
-    "# BUT... Some of these don't work for all emails!"
+    "# change the elements in the list\n",
+    "my_new_email.remove('edu')\n",
+    "my_new_email.append('com')\n",
+    "\n",
+    "print('.'.join(my_new_email))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "#### BUT... Some of these don't work for all emails!"
    ]
   },
   {
@@ -142,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -175,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -196,7 +239,6 @@
     "\n",
     "# does a string contain a substring?\n",
     "# basic python:\n",
-    "\n",
     "if \"exam\" in \"We are having an exam next week.\":\n",
     "    print(\"Oh no!\")\n",
     "else:\n",
@@ -234,11 +276,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# That was too easy, what if we wanted to see if any numbers are in a string?\n",
+    "\n",
+    "test_string = \"Does this strin9 contain any numb3r5?\"\n",
+    "\n",
+    "# Volunteer python solutions?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is c in str(list(range(10)))\n",
+    "\n",
+    "def contains_num(test_string):\n",
+    "    for c in test_string:\n",
+    "        if c.isdigit():\n",
+    "            return True\n",
+    "    return False\n",
+    "        \n",
+    "contains_num(test_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
     }
    },
    "outputs": [
@@ -251,11 +377,9 @@
     }
    ],
    "source": [
-    "# That was too easy, what if we wanted to see if any numbers are in a string?\n",
+    "# How about using a set and some functional programming?\n",
+    "test_string = \"Does this strin9 contain any numb3r5?\"\n",
     "\n",
-    "test_string = \"Does this string c0ntain any number5?\"\n",
-    "\n",
-    "# Volunteer python solutions?\n",
     "if set(map(str, range(10))).intersection(test_string):\n",
     "    print(\"Found some numbers!\")\n",
     "else:\n",
@@ -264,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -276,18 +400,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_sre.SRE_Match object; span=(18, 19), match='0'>\n"
+      "<_sre.SRE_Match object; span=(15, 16), match='9'>\n"
      ]
     }
    ],
    "source": [
+    "# It's easier with regexes!\n",
+    "import re\n",
     "match = re.search(\"[0-9]\", test_string)\n",
     "print(match)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(801)-712-1238@\n"
+     ]
+    }
+   ],
+   "source": [
+    "# okay... that was kinda cool... how about to test if \n",
+    "# a string is a telephone number?\n",
+    "\n",
+    "print(telephone_number)\n",
+    "\n",
+    "# just to add extra noise\n",
+    "telephone_number += \"@\"\n",
+    "\n",
+    "# the structure is (numberything)-numberything-numberything"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -299,18 +455,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(801)-712-1238@\n",
       "<_sre.SRE_Match object; span=(0, 14), match='(801)-712-1238'>\n"
      ]
     }
    ],
    "source": [
-    "import re\n",
-    "# okay... that was kinda cool... how about to test if \n",
-    "# a string is a telephone number?\n",
-    "print(telephone_number)\n",
-    "telephone_number += \"@\"\n",
     "match = re.search(\"\\(\\d+\\)-\\d+-\\d+\", telephone_number)\n",
+    "\n",
     "print(match)"
    ]
   },
@@ -345,14 +496,14 @@
    "source": [
     "Also some \"control\" type characters:\n",
     "\n",
-    "1. \"+\" matches *at least* one of whatever precedes it...\n",
-    "  1. \"0+\" matches at least one \"0\"\n",
-    "  2. \"[A-Z]+\" matches at least one capital letter\n",
-    "2. \"\\*\" matches *any number* of whatever precedes it...\n",
+    "1. \"+\" matches *at least* one of whatever precedes it \n",
+    "   1. \"0+\" matches at least one \"0\"\n",
+    "   3. \"[A-Z]+\" matches at least one capital letter\n",
+    "2. \"\\*\" matches *any number* of whatever precedes it (matches null string as well)\n",
+    "6. \"?\" matches 0 or 1 of whatever precedes it (means *optional*)\n",
     "3. \"^\" matches start of string\n",
     "4. \"\\$\" matches end of string\n",
-    "5. \"\\\" escapes things!\n",
-    "6. \"?\" matches 0 or 1 of whatever precedes it (means *optional*)"
+    "5. \"\\\" escapes things!\n"
    ]
   },
   {
@@ -368,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -383,6 +534,7 @@
      "text": [
       "\\\n",
       "<_sre.SRE_Match object; span=(0, 1), match='\\\\'>\n",
+      "\\\\\n",
       "<_sre.SRE_Match object; span=(0, 1), match='\\\\'>\n"
      ]
     }
@@ -396,28 +548,109 @@
     "print(re.search(\"\\\\\\\\\", test))\n",
     "\n",
     "# Eww! Good thing Python has raw (escaped) strings\n",
+    "raw_test = r'\\\\'\n",
+    "print(raw_test)\n",
     "print(re.search(r'\\\\', test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_sre.SRE_Match object; span=(0, 24), match='(1.231,0.0012348,0,-5.9)'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Practice time:\n",
     "\n",
     "# match a vector of 4 floats (no space, but comma separated)\n",
-    "ex_vec = \"(1.231,0.0012348,0,5.9)\"\n",
+    "ex_vec = \"(1.231,0.0012348,0,-5.9)\"\n",
     "\n",
-    "match = re.search(\"\\((-?[0-9\\.]+[0-9]*),-?[0-9\\.]+[0-9]*,-?[0-9\\.]+[0-9]*,-?[0-9\\.]+[0-9]*\\)\", ex_vec)\n",
+    "# expr = ???\n",
     "\n",
-    "ex_vec"
+    "match = re.search(expr,ex_vec)\n",
+    "print(match)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_sre.SRE_Match object; span=(0, 14), match='..............'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "match = re.search('-?[0-9\\.]+[0-9]*',example)\n",
+    "print(match)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_sre.SRE_Match object; span=(0, 24), match='(1.231,0.0012348,0,-5.9)'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "match = re.search(\"\\(-?[0-9\\.]+[0-9]*,-?[0-9\\.]+[0-9]*,-?[0-9\\.]+[0-9]*,-?[0-9\\.]+[0-9]*\\)\", ex_vec)\n",
+    "print(match)"
    ]
   },
   {
@@ -428,11 +661,7 @@
     }
    },
    "source": [
-    "#### Matching groups!\n",
-    "\n",
-    "Okay... so there are some other special characters... parens!\n",
-    "\n",
-    "Parens in a regular expression indicate a region to extract as a \"group\""
+    "## Matching Groups with Parentheses"
    ]
   },
   {
@@ -450,6 +679,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +=: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-72-dd696b33fb65>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0msum\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0msum\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mmatch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgroup\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +=: 'int' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "match = re.search(\"\\((-?[0-9\\.]+[0-9]*),(-?[0-9\\.]+[0-9]*),(-?[0-9\\.]\"\n",
+    "                  \"+[0-9]*),(-?[0-9\\.]+[0-9]*)\\)\", ex_vec)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -459,7 +715,7 @@
    "source": [
     "#### Extras\n",
     "\n",
-    "The 're' module has a lot of other features, including string replace, findall... etc.\n",
+    "The 're' module has a lot of other features, including string replace, split, findall... etc.\n",
     "\n",
     "Mostly search gets the job done, but it's good to know the module has all this stuff!"
    ]
@@ -616,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -625,6 +881,7 @@
     "# Just for fun!!!\n",
     "\n",
     "import turtle\n",
+    "\n",
     "turtle.color('red', 'yellow')\n",
     "turtle.begin_fill()\n",
     "while True:\n",
@@ -638,12 +895,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🍕\n",
+      "OK HAND SIGN\n",
+      "0.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "import unicodedata\n",
+    "\n",
+    "print(unicodedata.lookup('SLICE OF PIZZA'))\n",
+    "print(unicodedata.name('👌'))\n",
+    "print(unicodedata.numeric('¼'))"
+   ]
   }
  ],
  "metadata": {
